tz-local/resource/jenkins/helm/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: 'false'
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
spec:
  rules:
  - host: jenkins.default.k8s_project.k8s_domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 80
  tls:
    - hosts:
        - jenkins.default.k8s_project.k8s_domain
      secretName: jenkins-ingress-tls
